TODO: resize keyboard when letter mode.

2019-07-02
- Fixed swapping bug

2019-06-27
- Enabled automatic code generation for metamodel
- Added model tests
- Added ExerciseGroupRepository custom repository to allow different searches
- Updated setup
- Fixed test on swap Marco
- Fixed Trash - Marco

2019-06-23
- Fixed bug preventing accented characters from being displayed.  (è) - need to test all the others.
- Fixed bug that looses track of letters when swapping them.
- Fixed bug requiring double input to start phaser.  Upgraded from phaser 2.2 to 2.13.2.

2019-06-22
- made assignment status into an object from an enum
- added stats to count number of completed assignments
- added assignment #8 by Marc-Antoine

2019-06-12
- added jquery library
- correct phaser height using header size
- added automatic rotation page reloading
- prevent invalid characters from creating ikons: control, enter, shift, etc.

2019-06-07
- installation on another development pc
- testing of the automatic configuration scripts
- add level information
- add keyword information
- auto configuration scripts (need to make the repeatable)
- fixed pagination bar on educator page
- fixed top logout (need French translation)

2019-06-06
- webjars: upgrade bootstrap from version 3.3.7 to 4.3.1
- webjars: jquery upgrade from 3.2.1 to 3.4.1
- pom: cleanup removing versions on managed libraries
- fixed setup configuration script
- setup script now encrypts passwords
- setup script creates admin user