@@ -24,7 +24,7 @@ educator.studentName=Name
 educator.studentAction=Action
 educator.noStudents=No students yet!
 
-legal.title=Terms and Conditions
+legal.title=Legal
 legal.back=Return to the start page
 
 login.title=Login Page
@@ -67,6 +67,10 @@ studentExercise.button=Register
 studentExercise.displayName=Display Name
 studentExercise.selection=Selection
 studentExercise.exerciseName=Exercise Name
+
+term.title=Terms and Conditions
+term.back=Return to the start page
+
 
 error.validation=Validation error
 error.PasswordMatch=The password fields must match
