@@ -24,7 +24,7 @@ educator.studentName=Nom
 educator.studentAction=Action
 educator.noStudents=Aucun joueur!
 
-legal.title=Termes et conditions
+legal.title=Légal
 legal.back=Retour vers la page d'accueil
 
 login.title=Page de connexion
@@ -67,6 +67,10 @@ studentExercise.button=Sauvegarder la sélection
 studentExercise.displayName=Nom visible
 studentExercise.selection=Sélection
 studentExercise.exerciseName=Titre du tableau
+
+term.title=Termes et conditions
+term.back=Retour vers la page d'accueil
+
 
 error.validation=Erreur de validation
 error.PasswordMatch=Les mots de passe doivent être identiques
