@@ -1,0 +1,47 @@
+<!DOCTYPE html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:th="http://www.thymeleaf.org"
+	layout:decorate="~{fragments/layout}">
+<head>
+<title th:text="#{term.title}"></title>
+</head>
+<body>
+	<div layout:fragment="content" th:remove="tag">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+
+				<h1 th:text="#{term.title}"></h1>
+				<label>The standard Lorem Ipsum passage, used since the
+					1500s</label>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+					do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+					enim ad minim veniam, quis nostrud exercitation ullamco laboris
+					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+					culpa qui officia deserunt mollit anim id est laborum.</p>
+				<label>Section 1.10.32 of "de Finibus Bonorum et Malorum",
+					written by Cicero in 45 BC</label>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit
+					voluptatem accusantium doloremque laudantium, totam rem aperiam,
+					eaque ipsa quae ab illo inventore veritatis et quasi architecto
+					beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+					voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+					magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+					porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+					consectetur, adipisci velit, sed quia non numquam eius modi tempora
+					incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut
+					enim ad minima veniam, quis nostrum exercitationem ullam corporis
+					suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+					Quis autem vel eum iure reprehenderit qui in ea voluptate velit
+					esse quam nihil molestiae consequatur, vel illum qui dolorem eum
+					fugiat quo voluptas nulla pariatur?</p>
+				<p>
+					<a href="/" th:href="@{/}" th:text="#{term.back}"></a>
+				</p>
+
+			</div>
+		</div>
+	</div>
+</body>
+</html>
